--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -4,6 +4,13 @@ body {
   min-width: 320px;
 }
 
+
+.blockquote-footer {
+  &::before {
+    content: "\2014 \00A0";
+  }
+}
+
 .nav-link[data-bs-target] {
   color: var(--bs-btn-hover-bg);
 }
